gh-pages package added. title changed.

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
             href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,600;1,700;1,800&display=swap"
             rel="stylesheet"
         />
-        <title>React App</title>
+        <title>MeStore</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
